--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <body>
     <h1>TITLE!</h1>
     <div id="root"></div>
-    <script src="/src/js/script.js"></script>
+    <script src="./src/js/script.js"></script>
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
